...
            "state": "translated",
            "value": "దినచర్య నమోదు"
          }
        }
      }
    },
    "Daily Note": {
      "localizations": {
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "दैनिक नोट"
          }
...
            "state": "translated",
            "value": "వివరణాత్మక గణాంకాలు"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "हो गया"
          }
...
            "state": "translated",
            "value": "దాచు"
          }
        }
      }
    },
    "Hide details": {
      "localizations": {
        "hi": {
          "stringUnit": {
            "state": "translated",
            "value": "विवरण छिपाएं"
          }
...
